master.css
@charset "utf-8";

/* misc */
html{
	box-sizing: border-box;

	font-size: 18px;
	line-height: 1.5;
	font-family: 'Kumbh Sans', sans-serif;
	color: black;
}
*, *:before, *:after {
	box-sizing: inherit;
}
html *{
	margin: 0;
}
#contactItems{
	list-style-type: none;
	margin: 1rem 0;
	max-width: calc(550px - 4rem);
	padding: 0;
}
img{
	display: block;
	max-width: 100%;
	margin: 1rem 0;
}

/* to touch or not to touch? */
@media (hover: none) {
	.mouseOnly{
		display: none;
	}
}
@media (hover: hover) {
	.touchOnly{
		display: none;
	}
}

/* type */
h1 {
	font-size: 1.5rem;
	font-family: 'Dosis', sans-serif;
	font-weight: 400;

	line-height: 2rem;

	margin: 3rem 0;
}
h1>b {
	font-size: 1.75rem;
	font-weight: 700;
}

h2 {
	font-size: 1rem;
	font-family: 'Dosis', sans-serif;
	font-weight: 800;

	margin: 1rem 0;
}
h3{
	font-size: 1rem;
	font-weight: 200;
	font-style: italic;

	margin: 0.5rem 0 0;
}
p{
	margin: 0 0 1rem;
}
p:last-child{
	margin-bottom: 1rem;
}
article ul{
	padding-left: 1.5rem;
}
article ul ul li{
	font-weight: 200;
	font-style: italic;
}
article>section>ul:last-child{
	margin-bottom: 1rem;
}

a:link {
	text-decoration: none;
	color: #005DFF;
}
a:visited {
	color: #0146BE;
}
a:hover {
	color: #00348f;
}

/*Head Back*/
#back>img{
	position: absolute;
	z-index: 1;
	
	margin: 0;
	height: 5.4rem;
	top: 3.75rem;
}
#back>h1{
	text-shadow: 0 0 0.5rem #ffffff;
	color:black;
	background-color: #ffffffda;
	position: relative;
	z-index: 2;
	margin-right:-2rem;

	overflow: hidden;
	white-space: nowrap;
	z-index: 500000;

	transition: all ease 0.5s;
	animation: headBackClue ease 0.6s alternate;
	animation-iteration-count: 2;
	animation-delay: 2s;
}
#back>h1:hover{
	color: #bdbdbd;
	background-color: transparent;
	padding-left: 7.4rem;

	transition: all ease 0.5s;
}

#back:active{
	opacity: 50%;
	transition: all ease 0.1s;
}
#back:active>h1{
	opacity: 50%;
	transition: all ease 0.1s;
}

@keyframes headBackClue{
	0%{
		color:black;
		background-color: #ffffffda;
		padding-left: 0;
	}
	83%{
		color: #bdbdbd;
		background-color: transparent;
		padding-left: 7.4rem;
	}
	100%{
		color: #bdbdbd;
		background-color: transparent;
		padding-left: 7.4rem;
	}
}

/*BUTTONS*/
.buttonWrapper{
	margin: calc(1.5rem - 5px) -5px;
}
aside>.buttonWrapper{
	background-color: #ffffffdd;
	box-shadow: 0 0rem 1rem 1rem #ffffffdd;	
	position: sticky;
	/*position: fixed;*/
	bottom: 1.5rem;
}
.buttonWrapper>a{
	display: inline-block;
	max-width: calc(100% - 0.5rem);

	border-radius: 99rem;
	margin: 5px;
	padding: 0.8rem 1.5rem;
	border: none;

	box-shadow: 2px 5px 1rem #00000020;
	background-color: #005dff;

	/*text-align: center;*/
	font-size: 1rem;
	font-family: 'Dosis', sans-serif;
	font-weight: 800;
	color: white;
	
	transition: all ease 0.5s;
}
.buttonWrapper>a:hover{
	box-shadow: 2px 5px 1rem #00000050;
	background-color: #00348f !important;
}
.buttonWrapper>a:active{
	box-shadow: 2px 5px 0.5rem #00000050;

	background-color: black !important;
	transition: all ease 0.1s;
}
.buttonWrapper>a:focus{
	outline-style: none;
	box-shadow: 0 0 0 3px black inset;
}

.buttonWrapper img{
	display: inline-block;
	margin: 0;
	margin-left: 0.5rem;

	filter: invert(100%);

	vertical-align: middle;
	height: 1rem;
}

img.loneIcon{
	margin: 0;
}

#uRHere, #uRHere:hover, #uRHere:active{
	color: #00348f;
	background-color: transparent !important;
	box-shadow: 0 0 0 3px #00348f inset;
}

/* copyables*/
.copyable{
	cursor: pointer;
	transition: all ease 0.5s;
}
.copyable>span{
	border-radius: 5px;
	transition: all ease 0.5s;
}
.copyable:hover>span{
	background-color: #DDDDDD;
}
.copyable:active>span{
	background-color: #7EADFF;
	transition: all ease 0.2s;
}

.copyable>div{
	float: right;
	opacity: 0;
	transition: all ease 0.5s;
}
.copyable>div::after{
	content: "click to copy";
}
@media (hover: none) {
	.copyable{
		cursor: none;
	}
	.copyable>div::after{
		content: "copied";
	}
}
.copyable:hover>div {
	opacity: 50%;
}
.copyable:active>div{
	opacity: 100%;
	transition: all ease 0.2s;
}
.copyable>div>img{
	padding: 0;
	margin: 0 0.5rem;
	height: 1rem;
	vertical-align: middle;
	float: left;
}

/* structure */
body{
	background-color: gainsboro;
	background-image: linear-gradient(to right,#f4f4f4,#dcdcdc);
	display:block;
	margin: 0;
	padding: 0;
}
aside{
	background-color: white;
	margin: 0 auto;
	padding: 0.5rem 2rem;
	
	box-shadow: 2px 5px 1.5rem #c5c5c5;
}
article>section{
	background-color: white;
	border-radius: 2rem;
	padding: 0.5rem 2rem;
	box-shadow: 2px 5px 1rem #00000020;
}
object, iframe{
	display: block;
	box-sizing: border-box;
	width: 100%;
	margin:1rem 0;

	background-color: #add8e6;
	box-shadow: 2px 5px 1rem #00000020;
}


figcaption{
	box-sizing: border-box;
	font-style: italic;
	padding:0 1rem 0;
	margin: 0.7rem 0 1.3rem;
}
figure {
	margin: 1rem 0;
}
figure>img{
	box-shadow: 2px 5px 1rem #00000020;
}
figure>a>img{
	margin: 0;
	box-shadow: 2px 5px 1rem #00000020;
	transition: all ease 0.5s;
}
figure>a:hover>img{
	filter: brightness(1.25);
	box-shadow: 2px 5px 1rem #00000050;
	transition: all ease 0.5s;
}
figure>a:active>img{
	filter: brightness(0.75);
	box-shadow: 2px 5px 0.5rem #00000050;
	transition: all ease 0.2s;
}



/* small device */
@media screen and (max-width: 550px){
	aside{
		margin: 0 auto;
	}
	article{
		width:100%;
	}
	article>section{
		margin: 0.5rem;
	}
	object, iframe{
		height: calc(100vh - 9rem);
	}
}

/* medium */
@media screen and (min-width: 551px) and (max-width:1000px){
	article>section{
		max-width: 450px;
		margin: 0.5rem auto;
	}
	object, iframe{
		height: calc(100vh - 9rem);
	}
}

/* normal */
@media screen and (min-width: 1001px){
	aside{
		height: 100%;
		width: 400px;
		position: fixed;
		top: 0;
		left: 0;
		float: left;
		overflow-y: auto;
	}
	article{
		margin-left: 400px;
		width: auto;
	}
	article>section{
		margin:2rem 3rem;
	}
	object, iframe{
		height: calc(100vh - 11rem);
	}
}

/* large */
@media screen and (min-width:1151px){
	figure 	img{
		max-width: 50%;
		display: inline-block;
	}
	figcaption{
		max-width: 49%;
		display: inline-block;
		vertical-align: top;
	}
	article>section{
		margin: 2rem auto;
		/*width: calc(750px - 7rem);*/
		width: calc(50vw + 175px - 7rem);
	}
}

